@@ -3,6 +3,17 @@ X3 ChangeLog
 
 2010-07-07  Matthew Beeching  <jobe@mdbnet.co.uk>
 
+	* src/hash.h: Added support for user modes +z and +a and fixed
+	some comments.
+
+	* src/opserv.c: Added support for user modes +z and +a and
+	added support to TRACE/ADDALERT CHECKRESTRICTIONS criteria for
+	channel mode +a and +Z.
+
+	* src/proto-p10.c: Added support for user modes +z and +a.
+
+2010-07-07  Matthew Beeching  <jobe@mdbnet.co.uk>
+
 	* src/opserv.c: Added support to TRACE/ADDALERT CHECKRESTRICTIONS
 	criteria for channel mode +O and +r.
 
